--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ferney</title>
+    <title>si se pudo</title>
 </head>
 <body>
     <p>
-        hola mundo
+        lo logre
     </p>
 </body>
 </html>
